--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -1,14 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InscriptionFragment.WelcomeFragment">
+    tools:context=".inscriptionFragment.WelcomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:background="@drawable/bg1"
+        android:gravity="center_horizontal|center_vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:orientation="vertical"
+            android:textAlignment="center"
+            android:textDirection="inherit">
+
+            <ImageView
+                android:id="@+id/image_top_welcome"
+                android:layout_width="match_parent"
+                android:layout_height="310dp"
+                android:contentDescription="@string/welcome_page_content_description"
+                android:rotationY="-12"
+                android:src="@drawable/welcome_bg_foreground" />
+
+            <TextView
+                android:id="@+id/message_welcome_page"
+                android:layout_width="match_parent"
+                android:layout_height="142dp"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/roboto"
+                android:text="@string/welcome_page_message"
+                android:textAlignment="center"
+                android:textColor="#FFFFFF"
+                android:textSize="35sp" />
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+
+                <Button
+                    android:id="@+id/button_next"
+                    android:layout_width="360dp"
+                    android:layout_height="74dp"
+                    android:layout_marginStart="17sp"
+                    android:layout_marginTop="50sp"
+                    android:fontFamily="@font/roboto"
+                    tools:text="@string/welcome_page_next_button" />
+            </TableRow>
+
+        </LinearLayout>
+
+    </RelativeLayout>
 
 </FrameLayout>
