--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -52,7 +52,8 @@
                     android:layout_marginStart="17sp"
                     android:layout_marginTop="50sp"
                     android:fontFamily="@font/roboto"
-                    tools:text="@string/welcome_page_next_button" />
+                    tools:text="@string/welcome_page_next_button"
+                    android:text="@string/welcome_page_next_button"/>
             </TableRow>
 
         </LinearLayout>
