added toolbar managed in MainActivity.kt

--- a/app/src/main/res/menu/toobar_menu.xml
+++ b/app/src/main/res/menu/toobar_menu.xml
@@ -3,11 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_search"
-        android:icon="@drawable/ic_search_icon_light"
+        android:icon="@drawable/ic_search_icon_dark"
         android:title="@string/action_search"
         app:showAsAction="ifRoom"/>
 
     <item android:id="@+id/action_settings"
         android:title="@string/action_parameters"
+        android:iconTint="@color/white"
         app:showAsAction="never"/>
 </menu>
