--- a/app/src/main/res/anim/slide.xml
+++ b/app/src/main/res/anim/slide.xml
@@ -4,8 +4,7 @@
     <translate
         android:fromXDelta="-50%"
         android:fromYDelta="0%"
-        android:duration="1500"
-        />
+        android:duration="1500" />
 
     <alpha
         android:fromAlpha="0.1"
