--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/welcomeFragment"
     android:layout_width="match_parent"
@@ -9,10 +10,13 @@
     <!-- TODO: Update blank fragment layout -->
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/relativeLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@drawable/bg1"
-        android:gravity="center_horizontal|center_vertical">
+        android:gravity="center_horizontal|center_vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -41,7 +45,8 @@
                 android:textColor="#FFFFFF"
                 android:textSize="35sp" />
 
-            <TableRow
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/tableRow"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -49,15 +54,21 @@
                     android:id="@+id/button_next"
                     android:layout_width="360dp"
                     android:layout_height="74dp"
-                    android:layout_marginStart="17sp"
-                    android:layout_marginTop="50sp"
+                    android:layout_marginStart="17dp"
+                    android:layout_marginBottom="185dp"
                     android:fontFamily="@font/roboto"
                     android:text="@string/welcome_page_next_button"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.235"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.0"
                     tools:text="@string/welcome_page_next_button" />
-            </TableRow>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
 
     </RelativeLayout>
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
