--- a/app/src/main/res/menu/toobar_menu.xml
+++ b/app/src/main/res/menu/toobar_menu.xml
@@ -5,10 +5,11 @@
         android:id="@+id/action_search"
         android:icon="@drawable/ic_search_icon_dark"
         android:title="@string/action_search"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
 
-    <item android:id="@+id/action_settings"
+    <item
+        android:id="@+id/action_settings"
         android:title="@string/action_parameters"
         android:iconTint="@color/white"
-        app:showAsAction="never"/>
+        app:showAsAction="never" />
 </menu>
