--- a/app/src/main/res/layout/fragment_message_item.xml
+++ b/app/src/main/res/layout/fragment_message_item.xml
@@ -49,6 +49,7 @@
                 android:gravity="center|left"
                 android:text="TextView"
                 android:textSize="20sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/last_message_date"
                 app:layout_constraintHorizontal_bias="1.0"
